# maratona-behind-the-code-2021

./: .gitignore  .gitmodules  .python-version  README.md  pyproject.toml
1-bantotal/: README.md
1-bantotal/solução/: ANSWERS.csv  notebook.ipynb
2-quanam/: README.md
2-quanam/solução/: answers.csv  iot.csv  node-red-flows.json  notebook.ipynb
2-quanam/solução/sensor_alert/src/: main.py
2-quanam/solução/sensor_alert/tests/: test_main.py
3-gft/: README.md
3-gft/solução/: ANSWERS.csv  notebook.ipynb
4-algar-tech/: README.md
4-algar-tech/solução/: skill-fake-it-solutions.json
5-sonda/: README.md
5-sonda/solução/: ANSWERS.csv  notebook.ipynb
